force-app/main/default/objects/Quote/fields/Approval_Decided_At__c.field-meta.xml
<CustomField>
    <fullName>Approval_Decided_At__c</fullName>
    <label>결재 처리 일시</label>
    <type>DateTime</type>
</CustomField>