force-app/main/default/objects/Quote/fields/Approval_Requested_At__c.field-meta.xml
<CustomField>
    <fullName>Approval_Requested_At__c</fullName>
    <label>결재 요청 일시</label>
    <type>DateTime</type>
</CustomField>