force-app/main/default/objects/Quote/fields/Discount_Justification__c.field-meta.xml
<CustomField>
    <fullName>Discount_Justification__c</fullName>
    <label>할인 사유</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>