force-app/main/default/objects/Quote/fields/Installation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Installation_Fee__c</fullName>
    <label>설치비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>