force-app/main/default/objects/Quote/fields/Monthly_Rental_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rental_Fee__c</fullName>
    <label>월 렌탈비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>