force-app/main/default/objects/Quote/fields/Proposal_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Scenario__c</fullName>
    <label>견적 유형</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>렌탈안</fullName>
            </value>
            <value>
                <fullName>구매안</fullName>
            </value>
            <value>
                <fullName>렌탈/구매 병행</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>