force-app/main/default/objects/Quote/fields/Rental_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Rental_Term_Months__c</fullName>
    <label>렌탈 기간(개월)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>