force-app/main/default/objects/Quote/fields/Revision_Count__c.field-meta.xml
<CustomField>
    <fullName>Revision_Count__c</fullName>
    <label>견적 수정 횟수</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>