force-app/main/default/objects/Quote/fields/Sent_To_Customer_At__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_Customer_At__c</fullName>
    <label>고객 송부 일시</label>
    <type>DateTime</type>
</CustomField>