force-app/main/default/objects/Quote/fields/Total_Quoted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Quoted_Amount__c</fullName>
    <label>총 견적 금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>