force-app/main/default/objects/Quote/validationRules/RentalTermRequiredForRentalQuote.validationRule-meta.xml
<ValidationRule>
    <fullName>RentalTermRequiredForRentalQuote</fullName>
    <active>true</active>
    <description>렌탈 성격의 견적은 렌탈 기간을 반드시 입력하도록 강제합니다.</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Proposal_Scenario__c, "렌탈안"),
        ISPICKVAL(Proposal_Scenario__c, "렌탈/구매 병행")
    ),
    ISBLANK(Rental_Term_Months__c)
)</errorConditionFormula>
    <errorDisplayField>Rental_Term_Months__c</errorDisplayField>
    <errorMessage>렌탈 견적은 렌탈 기간(개월)을 입력해야 합니다.</errorMessage>
</ValidationRule>